# SIByLEngine2023

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  SIByLEngine.sln
APITest/: APITest.vcxproj  CMakeLists.txt
APITest/src/: main.cpp
Engine/: CMakeLists.txt
Engine/Binaries/Runtime/spirv/: tmp.comp  tmp.glsl  tmp.spv
Engine/Shaders/: test.spv
Engine/Shaders/Common/: test_compute.comp  test_shader_frag.frag  test_shader_vert.vert
Engine/Shaders/Editor/draw_line_2d/: draw_line_2d.frag  draw_line_2d.vert
Engine/Shaders/Editor/draw_line_3d/: draw_line_3d.frag  draw_line_3d.vert
Engine/Shaders/PhysicS/includes/: spatial_hashing.hlsli
Engine/Shaders/RayTracing/: ao.rgen  ao.rmiss  ao_shared.h  host_device.glsl  host_device.h  rayCommon.h  raycommon.glsl  raytrace.rgen  raytrace.rmiss  raytrace_test.rgen
Engine/Shaders/RayTracing/RayTrace/: raytrace.rgen
Engine/Shaders/SRenderer/common/: gbuffer.h  restir_di.glsl  restir_di_def.h  slc.glsl
Engine/Shaders/SRenderer/fullscreen/: blit.slang
Engine/Shaders/SRenderer/include/: common_config.h  common_custom_primitives.h  common_descriptor_sets.h  common_descriptor_sets.hlsl  common_hit.h  common_trace.h  common_utils.h  common_vert.h  debug_draw.h  diff_descriptor_set.hlsli  diff_scene_io.hlsli  disney_bsdf.h  microfacet.h  raytracer_descriptor_set.hlsli  scene_descriptor_set.hlsli  scene_descriptor_sets.h  (+1 more)
Engine/Shaders/Utility/: geometry.h  hlsl2glsl.h  math.glsl  math.h  random.glsl  random.h  sampling.h  visualization.h
Engine/binary/dlls/: pyapp.pyd  pycore.pyd  pyeditor.pyd
Engine/binary/libs/: cnpy.lib  core.exp  core.lib  core_d.exp  core_d.lib  editor.exp  editor.lib  pyapp.exp  pyapp.lib  pycore.exp  pycore.lib  pyeditor.exp  rhi.exp  rhi.lib  rhi_d.exp  rhi_d.lib  tinyexr.lib  tinyxml.lib
Engine/source/: CMakeLists.txt
Engine/source/core/: CMakeLists.txt
Engine/source/editor/: CMakeLists.txt
Sandbox/: 0.spirv  1.nv-gpudmp  1.py  1.spirv  10.spirv  11.spirv  12.spirv  13.spirv  14.spirv  15.spirv  16.spirv  17.spirv  18.spirv  2.spirv  21.spirv  3.spirv  4.spirv  5.spirv  6.spirv  7.spirv  8.spirv  9.spirv  CMakeLists.txt  Sandbox.vcxproj  Sandbox.vcxproj.filters  gt.npy  imgui.ini  main.cpp  profile.json  profile2.json  runtime.config  test.pfm  test.ppm  test.slang  viking_room.scene
Sandbox/content/: 537423428.hdr  53742358.hdr  537424026.hdr  537424112.hdr  537424235.hdr  537424321.hdr  537424348.hdr  537424431.hdr  53742485.hdr  537424850.hdr  537424926.hdr  537425111.hdr  5374426.hdr  53744328.hdr  53744462.hdr  537444645.hdr  537444718.hdr  537444856.hdr  537445426.hdr  537445533.hdr  53744615.hdr  53744646.hdr  53744740.hdr  537452039.hdr  537452127.hdr  537454536.hdr  537454652.hdr  537454757.hdr  53745574.hdr  537455842.hdr  537455954.hdr  53746034.hdr  53746133.hdr  537461444.hdr  537461529.hdr  53746158.hdr  537461943.hdr  537462123.hdr  53746238.hdr  53746246.hdr  (+55 more)
Sandbox/content/cerberus/: cerberus.scene
Sandbox/content/meshes/: plane.fbx  teaport_box.fbx
Sandbox/content/video/: cuphead1.mkv  cuphead2.mkv
Sandbox/dmp/: 5332041659.nv-gpudmp  533204726.nv-gpudmp  533206223.nv-gpudmp  533206466.nv-gpudmp  5332064749.nv-gpudmp
Sandbox/examples/: CMakeLists.txt
Sandbox/examples/cbt/: cbt.py
Sandbox/examples/editor-cpp/: .gitignore  CMakeLists.txt  main.cpp
Sandbox/examples/epflmat/: epflmat.py  pipeline.py
Sandbox/examples/inspector/: inspector.py  pipeline.py
Sandbox/examples/mapping/: mapping.py  pipeline.py
Sandbox/examples/nee/: nee.py
Sandbox/examples/rasterdiff/: stochastic-grad-estimator.py
Sandbox/extension/: CMakeLists.txt  py.reparam.cpp
Sandbox/profile/: Unknown Session.json  new_session.json
Sandbox/scenes/: ajar.scene  fireplace.scene  staircase.scene
Sandbox/se/: common.py  debugger.py  editor.py  pyapp.pyd  pycore.pyd  pycore.pyi  pyeditor.pyi
Sandbox/shaders/cbt/: cbt-sbt.hlsli  cbt.hlsli  sbt-visualize.slang  sum-reduction-fuse.slang  sum-reduction-one.slang
Sandbox/shaders/common/: camera.hlsli  colormaps.hlsli  cpp_compatible.hlsli  diffresource.hlsli  error.hlsli  gamma.hlsli  gaussian.hlsli  geometry.hlsli  hashing.hlsli  ltc.hlsli  mapping.hlsli  math.hlsli  microfacet.hlsli  packing.hlsli  random.hlsli  ratiocv.hlsli  raycast.hlsli  rotation.hlsli  sampling.hlsli  space_filling_curve.hlsli  vm.hlsli  vmf.hlsli  waveintrinsic.hlsli
Sandbox/shaders/editor/: draw-billboard.slang  draw-line3d.hlsli  draw-line3d.slang  initialize.slang  mesh-inspector.slang  structures.hlsli
Sandbox/shaders/guiding/: octmap-refill.slang  octmap-sum.slang  octmap.hlsli
Sandbox/shaders/rasterizer/: shade.slang
Sandbox/shaders/rb/: backward-0.slang  backward-1.slang  backward-2.slang  backward-3.slang  backward-4.slang  backward-5.slang  backward-6.slang  forward.slang  fused-0.slang  inverse-baker.slang  sample.slang
Sandbox/shaders/reparam/: backward-new.comp  backward-old.comp  backward.comp  backward.slang  backward_comp-new.spv  backward_comp-old.spv  backward_comp.spv  common.hlsli  forward.slang
Sandbox/shaders/sampling/: pmf.hlsli  warps.hlsli
Sandbox/shaders/srenderer/: lights.hlsli  materials.hlsli  mediums.hlsli  rayquery.hlsli  scene-binding.hlsli  spt.hlsli
Sandbox/shaders/tinymlp/: backward-01.slang  backward-mis.slang  backward-narrow.slang  backward-pmf.slang  backward.slang  forward-01.slang  forward.slang  half-matmul-include.glsli  half-matmul-include.hlsli  tiny-mlp.slang  tinynn-activations.hlsli  tinynn-featuregrid.hlsli  tinynn-half-linear.hlsli  tinynn-half-mlp.hlsli  tinynn-tensorview.hlsli
Sandbox/shaders/tinynn/: half-matmul-include.glsli  half-matmul-include.hlsli  tinymlp-half-16.hlsli  tinymlp-half-32.hlsli  tinymlp-half-64.hlsli  tinynn-activations.hlsli  tinynn-common.hlsli
Sandbox/shaders/utility/: pmf-build.slang  pmf-sample.slang  subgroup-op.glsli  subgroup-op.hlsli
Sandbox/shaders/vxnerf/: forward-inspector.slang  train.slang
Sandbox/src/: CustomPipeline.hpp  Sandbox.AAF_GI.ixx  Sandbox.Benchmark.ixx  Sandbox.MAAF.ixx  Sandbox.Tracer.ixx  main.cpp
(+1808 files in other folders)
