set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/Engine/binary/libs/${CURRENT_PLATFORM})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/Engine/binary/libs/${CURRENT_PLATFORM})
set(RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/Engine/binary/libs/${CURRENT_PLATFORM})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/Engine/binary/dlls/${CURRENT_PLATFORM})

add_subdirectory("extern")
add_subdirectory("source")