set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/Engine/binary/libs/${CMAKE_BUILD_TYPE})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/Engine/binary/libs/${CMAKE_BUILD_TYPE})
set(RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/Engine/binary/libs/${CMAKE_BUILD_TYPE})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/Engine/binary/dlls/${CMAKE_BUILD_TYPE})

add_subdirectory("extern")
add_subdirectory("source")